# chip8-emulator

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: chip8.hpp  cpu.cpp  cpu.hpp  main.cpp  registers.cpp  registers.hpp  stack.cpp  stack.hpp
